syntax = "proto3";

option go_package = "example.com/tokenmanager/pkg/token";

package token;

// The greeting service definition.
service Token {
  rpc CreateToken (CreateTokenRequest) returns (CreateTokenResponse) {}
  rpc DropToken (DropTokenRequest) returns (DropTokenResponse) {}
  rpc WriteToken (WriteTokenRequest) returns (WriteTokenResponse) {}
  rpc ReadToken (ReadTokenRequest) returns (ReadTokenResponse) {}
}

message CreateTokenRequest {
  string id = 1;
}

message CreateTokenResponse {
}

message DropTokenRequest {
  string id = 1;
}

message DropTokenResponse {
}

message WriteTokenRequest {
  string id = 1;
  string name = 2;
  uint64 low = 3;
  uint64 high = 4;
  uint64 mid = 5;
}

message WriteTokenResponse {
  uint64 partial = 1;
}

message ReadTokenRequest {
  string id = 1;
}

message ReadTokenResponse {
  uint64 final = 1;
}
